--- a/html.html
+++ b/html.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="'UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Rosas</title>
@@ -9,9 +9,9 @@
     <body>
 
         <article>
-            <hi>Bem-vindo á Minha Página!</hi>
+            <h1>Bem-vindo á Minha Página!</h1>
 
-            <img scr="img/" alt="Imagem Exemplo">
+            <img src="imagem1/istockphoto-158894647-612x612.jpg" alt="Imagem Exemplo">
 
             <p>A rosa é uma das flores mais populares no mundo. Vem sendo cultivada pelo homem desde a A
              A primeira rosa cresceu nos jardins asiáticos há cerca de 5 000 anos.<br>
